--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,11 @@
 ---
 galaxy_info:
+  role_name: nfs_share
   author: ome-devel@lists.openmicroscopy.org.uk
   description: Manage NFS file shares
   company: Open Microscopy Environment
   license: BSD
-  min_ansible_version: 2.1
+  min_ansible_version: 2.4
   platforms:
     - name: EL
       versions:
