Use ome.nfs_mount role for tests

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -25,7 +25,7 @@
           - host: "*"
             options: "rw,fsid=0"
 
-    - role: openmicroscopy.nfs-mount
+    - role: ome.nfs_mount
       nfs_share_mounts:
         - path: /mnt/rw
           location: localhost:/share
