--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,8 +3,10 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
+lint: |
+    yamllint .
+    ansible-lint
+    flake8
 platforms:
   - name: nfs-share
     image: centos/systemd
@@ -22,5 +24,3 @@ scenario:
   name: default
 verifier:
   name: testinfra
-  lint:
-    name: flake8
