Make work on Rocky Linux 9

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,8 @@
 
 - name: system packages | nfs server
   become: true
-  yum:
+  ansible.builtin.dnf:
+    update_cache: true
     name: nfs-utils
     state: present
 
