--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -20,13 +20,13 @@
 
   roles:
 
-    - role: ome.nfs_share
+    - role: nfs_share
       nfs_shares:
         /srv:
           - host: "*"
             options: "rw,fsid=0"
 
-    - role: ome.nfs_mount
+    - role: nfs_mount
       nfs_share_mounts:
         - path: /mnt/rw
           location: localhost:/share
